Revision history for Perl extension Stor

{{$NEXT}}

0.4.4
   - lookup.attempt.[$attempt].count and lookup.time metrics added

0.4.3
    - remove retry - clients retry is better (not blocked servers process)
    - success.get.ok.[time/size] metrics added
    - remove error.get.unknown.count metric (success and error mismatch)

0.4.0
    - add basic authorization for POST

0.1.0
    - original version
