@@ -13,6 +13,8 @@ use Digest::SHA qw(sha256_hex);
 use failures qw(stor stor::filenotfound);
 use Safe::Isa;
 use Try::Tiny::Retry;
+use Guard qw(scope_guard);
+use Time::HiRes qw(time);
 
 use feature 'signatures';
 no warnings 'experimental::signatures';
@@ -184,12 +186,16 @@ sub _lookup ($self, $sha, $return_all_paths = '') {
     my @paths;
     my $attempt = 0;
     my $tm_start = time;
+
+    scope_guard {
+        $self->statsite->timing('lookup.time', time - $tm_start * 1000);
+        $self->statsite->increment("lookup.attempt.$attempt.count");
+    };
+
     for my $storage ($self->_get_shuffled_storages()) {
         $attempt++;
         my $file_path = path($storage, $self->_sha_to_filepath($sha));
         if ($file_path->is_file) {
-            $self->statsite->increment("lookup.attempt.$attempt.count");
-            $self->statsite->timing('lookup.time', time - $tm_start * 1000);
             push @paths, $file_path;
             return \@paths if !$return_all_paths
         }
