@@ -4,6 +4,7 @@ Revision history for Perl extension Stor
 
 0.4.4
    - lookup.attempt.[$attempt].count and lookup.time metrics added
+   - remove Cpanel::JSON::XS dependency
 
 0.4.3
     - remove retry - clients retry is better (not blocked servers process)
